--- a/paginadecontacto.html
+++ b/paginadecontacto.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Marcos" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Comercio Online</title>
 </head>
 <body>
-    <header style="background-color: #333; color: white; padding: 10px 0; text-align: center;">
+    <header style="background-color:  #ae94e9; color: white; padding: 10px 0; text-align: center;">
         <h1>Contacto</h1>
         <nav>
             <ul style="list-style-type: none; padding: 0;">
@@ -33,7 +33,7 @@
         </form>
     </main>
 
-    <footer style="background-color: #333; color: white; text-align: center; padding: 10px 0;">
+    <footer style="background-color:  #ae94e9; color: white; text-align: center; padding: 10px 0;">
         <p>&copy; 2024 Comercio Online</p>
     </footer>
 </body>
