--- a/paginadecontacto.html
+++ b/paginadecontacto.html
@@ -4,37 +4,129 @@
     <meta charset="UTF-8">
     <meta name="Marcos" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Comercio Online</title>
+    <!-- Fabicom -->
+    <link rel="icon" type="image/png" href="Imagenes/favicon.png">
+
+    <style>
+        /* Estilos generales */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #ae94e9;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        header nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        header nav ul li {
+            display: inline;
+            margin: 0 45px;
+        }
+
+        header nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        /* Estilos del formulario */
+        main {
+            text-align: center;
+            padding: 20px;
+        }
+
+        main h2 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        form {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        form label {
+            display: block;
+            text-align: left;
+            margin-top: 15px;
+        }
+
+        form input, form textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+
+        form button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 12px 24px;
+            border-radius: 5px;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        /* Estilos del pie de página */
+        footer {
+            background-color: #ae94e9;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+        }
+
+        footer a {
+            color: white;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <header style="background-color:  #ae94e9; color: white; padding: 10px 0; text-align: center;">
+    <header>
         <h1>Contacto</h1>
         <nav>
-            <ul style="list-style-type: none; padding: 0;">
-                <li style="display: inline; margin: 0 15px;"><a href="index.html" style="color: white; text-decoration: none; font-weight: bold;">Inicio</a></li>
-                <li style="display: inline; margin: 0 15px;"><a href="ventaproductos.html" style="color: white; text-decoration: none; font-weight: bold;">Productos</a></li>
-                <li style="display: inline; margin: 0 15px;"><a href="paginadecontacto.html" style="color: white; text-decoration: none; font-weight: bold;">Contacto</a></li>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <br>
+                <li><a href="ventaproductos.html">Productos</a></li>
+                <li><a href="paginadecontacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
-    <main style="text-align: center; padding: 20px;">
+    <main>
         <h2>Formulario de Contacto</h2>
-        <form action="#" method="post" style="max-width: 600px; margin: 0 auto;">
-            <label for="nombre" style="display: block;">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" required style="width: 100%; padding: 8px; margin: 10px 0;">
+        <form action="#" method="post">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required>
 
-            <label for="email" style="display: block;">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" required style="width: 100%; padding: 8px; margin: 10px 0;">
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" name="email" required>
 
-            <label for="mensaje" style="display: block;">Mensaje:</label>
-            <textarea id="mensaje" name="mensaje" rows="4" required style="width: 100%; padding: 8px; margin: 10px 0;"></textarea>
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
 
-            <button type="submit" style="background-color: #4CAF50; color: white; padding: 10px 20px; text-decoration: none;">Enviar</button>
+            <button type="submit">Enviar</button>
         </form>
     </main>
 
-    <footer style="background-color:  #ae94e9; color: white; text-align: center; padding: 10px 0;">
-        <p>&copy; 2024 Comercio Online</p>
+    <footer>
+        <p>&copy; 2024 Comercio Online | <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Licencia Creative Commons</a></p>
     </footer>
 </body>
 </html>
