--- a/paginadecontacto.html
+++ b/paginadecontacto.html
@@ -4,97 +4,10 @@
     <meta charset="UTF-8">
     <meta name="Marcos" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Comercio Online</title>
-    <!-- Fabicom -->
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="Imagenes/favicon.png">
-
-    <style>
-        /* Estilos generales */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #ae94e9;
-            color: white;
-            padding: 10px 0;
-            text-align: center;
-        }
-
-        header nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        header nav ul li {
-            display: inline;
-            margin: 0 45px;
-        }
-
-        header nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        /* Estilos del formulario */
-        main {
-            text-align: center;
-            padding: 20px;
-        }
-
-        main h2 {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-
-        form {
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        form label {
-            display: block;
-            text-align: left;
-            margin-top: 15px;
-        }
-
-        form input, form textarea {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-        }
-
-        form button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 12px 24px;
-            border-radius: 5px;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        /* Estilos del pie de página */
-        footer {
-            background-color: #ae94e9;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-        }
-
-        footer a {
-            color: white;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <!-- Enlace al archivo CSS externo -->
+    <link rel="stylesheet" href="CSS/stylespc.css">
 </head>
 <body>
     <header>
@@ -102,7 +15,6 @@
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <br>
                 <li><a href="ventaproductos.html">Productos</a></li>
                 <li><a href="paginadecontacto.html">Contacto</a></li>
             </ul>
@@ -112,21 +24,39 @@
     <main>
         <h2>Formulario de Contacto</h2>
         <form action="#" method="post">
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" required>
+            <div class="form-grid">
+                <div class="form-group">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" name="nombre" required>
+                </div>
 
-            <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" required>
+                <div class="form-group">
+                    <label for="email">Correo Electrónico:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
 
-            <label for="mensaje">Mensaje:</label>
-            <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+                <div class="form-group full">
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+                </div>
+            </div>
 
             <button type="submit">Enviar</button>
         </form>
     </main>
 
     <footer>
-        <p>&copy; 2024 Comercio Online | <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Licencia Creative Commons</a></p>
+        <p>&copy; 2024 Comercio Online | 
+            <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">
+                <img src="Imagenes/cc.png" alt="Creative Commons" width="70">
+            </a>
+        </p>
+        <p>
+            <a href="https://validator.w3.org/" target="_blank">
+                <img src="https://www.w3.org/Icons/valid-html401" alt="HTML Validado" width="88" height="31">
+            </a>
+        </p>
     </footer>
 </body>
 </html>
+
